<resources>
    <string name="app_name">EMS admin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="previous">Previous</string>
    <string name="create_your_company_admin_account">Create your company admin account</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="copmany_organization_name">Copmany/Organization Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="image_showing_department_display_icon">Image showing department display/icon</string>
    <string name="shows_image_of_a_project_selected_by_user">shows image of a project selected by user</string>
    <string name="view_employees">View Employees</string>
    <string name="end_date">End Date</string>
    <string name="project_name">Project Name</string>
    <string name="startdate">Start Date</string>
    <string name="project_status">Project Status</string>
    <string name="departmentname">Department Name</string>
    <string name="image_button_description">Image_button_description</string>
    <string name="project_image">project image</string>
    <string name="task_name">Task Name</string>
    <string name="task_status">Task Status</string>
    <string name="employee_name">Employee name</string>
    <string name="employee_image">Employee image</string>
    <string name="assigned">Assigned</string>
    <string name="search_image_button">search image button</string>
    <string name="superchat">Superchat</string>
    <string name="TextView">TextView</string>
    <string name="settings_image_button">settings image button</string>
    <string name="create_new_chat">create a new chat with 1 employee or more</string>
    <string name="last_sent_message">Last Sent Message</string>
    <string name="image_showing_profile_image_for_employee_on_the_receiving_side_of_the_chat">image showing profile image for employee on the receiving side of the chat</string>
    <string name="lsm_date">LSM date</string>
    <string name="back_button">Back button</string>
    <string name="department_name">Department Name</string>
    <string name="create_department">Create Department</string>
    <string name="assign_project">Assign Project</string>
    <string name="assign_employee">Assign Employee</string>
    <string name="assign_task">Assign Task</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="assign_to_department">Assign to Department</string>
    <string name="assign_to_project">Assign to Project</string>
    <string name="create_an_assign_employee">Create an Assign Employee</string>
    <string name="assign_to_task">Assign to Task</string>
    <string name="save">Save</string>
    <string name="assign_employees">Assign Employees</string>
    <string name="temporary">Temporary</string>
    <string name="recurring">Recurring</string>
    <string name="create_and_assign_task">Create and Assign Task</string>
    <string name="assign_task_to_department">Assign Task to Department</string>
    <string name="assign_task_to_project">Assign Task to Project</string>
    <string name="assign_task_to_employee">Assign Task to Employee</string>
    <string name="task_start_date">task start date</string>
    <string name="task_end_date">task end date</string>
    <string name="start_date">Start Date</string>
    <string name="chat_settings">chat settings</string>
    <string name="navigate_out_of_chat">navigate out of chat</string>
    <string name="call">call</string>
    <string name="chat_name">Chat Name</string>
    <string name="message">Message</string>
    <string name="send_message_button">send message button</string>
    <string name="create_new_department">Create New Department</string>
    <string name="employees">Employees</string>
    <string name="projects">Projects</string>
    <string name="add_and_assign_data_structure_to_department">add and assign data structure to department</string>
    <string name="employee_fname">Employee FName</string>
    <string name="departments_assigned_to">Departments Assigned To</string>
    <string name="projets_assigned_to">Projets Assigned To</string>
    <string name="task_assigned_to">Task Assigned To</string>
    <string name="create_employee">Create Employee</string>
    <string name="add_and_assign_data_structure_to_employee">add and assign data structure to employee</string>
    <string name="departments">Departments</string>
    <string name="create_project">Create Project</string>
    <string name="add_any_department_project_employee_or_task">add any department, project, employee or task</string>
    <string name="change_assignment_of_department_project_employee_or_task">Change assignment of Department, Project, Employee or Task</string>
    <string name="complete">% complete</string>
    <string name="iscomplete">IsComplete</string>
    <string name="department_list">Department List</string>
    <string name="employee_list">Employee List</string>
    <string name="task_list">Task List</string>
    <string name="create_task">Create Task</string>
    <string name="add_and_assign_data_structure_to_project">add and assign data strucutre to project</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_task">Add Task</string>
    <string name="add_project">Add Project</string>
    <string name="add_department">Add Department</string>
    <string name="item">Item</string>
    <string name="search_emails">Search emails</string>
    <string name="create_new_email">create new email</string>
    <string name="email_profile">email profile</string>
    <string name="create_email_draft">create email draft</string>
    <string name="time_sent">Time Sent</string>
    <string name="body">Body</string>
    <string name="subject">Subject</string>
    <string name="compose">Compose</string>
    <string name="server">Server</string>
    <string name="personal_pop3">Personal (POP3)</string>
    <string name="what_type_of_account_is_this">What type of account is this?</string>
    <string name="email_address">Email address</string>
    <string name="personal_imap">Personal (IMAP)</string>
</resources>