<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewDepartmentAdapter"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/project_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_project_icon" />

            <TextView
                android:id="@+id/tvDepartmentNameAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:text="@string/project_name"
                app:layout_constraintStart_toEndOf="@+id/imageViewDepartmentAdapter"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProjectEndDateAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/end_date"
                app:layout_constraintStart_toEndOf="@+id/tvProjectStartDateAdapter"
                app:layout_constraintStart_toStartOf="@+id/tvProjectStatusAdapter"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectStatusAdapter" />

            <TextView
                android:id="@+id/tvProjectStartDateAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/startdate"
                app:layout_constraintStart_toStartOf="@+id/tvDepartmentNameAdapter"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartmentNameAdapter" />

            <TextView
                android:id="@+id/tvProjectStatusAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/project_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toEndOf="@+id/tvDepartmentNameAdapter"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbProjectCompletion"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="122dp"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:indeterminate="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewDepartmentAdapter"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectStartDateAdapter"
                app:layout_constraintVertical_bias="0.1" />

            <CheckBox
                android:id="@+id/checkBoxProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assigned"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pbProjectCompletion"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectEndDateAdapter"
                app:layout_constraintVertical_bias="0.246" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>